# sora-watermark-remover

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
src/: __init__.py  cli.py  video_analyzer.py  watermark_processor.py
