[project]
name = "sora-watermark-remover"
version = "0.1.0"
description = "CLI tool to remove or blur dynamic watermarks from videos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.9.0",
    "ffmpeg-python>=0.2.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "numpy>=1.26.0",
]

[project.scripts]
watermark-remove = "main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
